# OZON_AUTOREP_BOT

./: .dockerignore  .env-example  .env.example  .gitignore  CHANGES.md  Dockerfile  README.md  ai_generator.py  autorep.py  bot.py  dashboard.py  database_worker.py  docker-compose.yml  fileworker.py  launch.sh  main.py  ozon_api.py  pyproject.toml  requirements.txt  suggestions.md
ai/: __init__.py  gigachat.py  local.py
api/: __init__.py  ozon.py
bot/: handlers.py
config/: __init__.py  logging.py  settings.py
data/: reviews.db  reviews_config.json  rewiews_counter.json
db/: __init__.py  manager.py
services/: review_service.py
