[project]
name = "ozon-autorep-bot"
version = "0.2.0"
description = "Автоматический ответчик на отзывы Ozon через Telegram-бота"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "langchain>=0.3",
    "langchain-gigachat>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=1.0",
    "tenacity>=9.0",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
]
local-llm = [
    "llama-cpp-python>=0.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
